--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body onload="loadInitialData()">
     <!-- Mobile Add New Item -->
     <div class="add__new__btn__mobile__only">
       <button
@@ -117,7 +117,13 @@
             >
               Close
             </button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button
+              type="submit"
+              class="btn btn-primary"
+              onclick="handleSubmit()"
+            >
+              Save changes
+            </button>
           </div>
         </div>
       </div>
@@ -125,14 +131,7 @@
 
     <!--Show Task Modal -->
 
-    <!-- <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#showTask"
-    >
-      Launch demo modal
-    </button> -->
+    <!--  Launch demo modal-->
     <div
       class="modal fade"
       id="showTask"
@@ -210,6 +209,7 @@
                 placeholder="Search your tasks here.."
                 aria-label="Username"
                 aria-describedby="addon-wrapping"
+                oninput="searchTask.apply(this, arguments)"
               />
               <span class="input-group-text" id="addon-wrapping">
                 <i class="fas fa-search"></i>
@@ -233,5 +233,50 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <!-- <div class="col-md-6 col-lg-4 mt-3" id="${id}" key="${id}">
+      <div class="card shadow-sm task__card">
+        <div
+          class="card-header d-flex justify-content-end task__card__header gap-2"
+        >
+          <button
+            type="button"
+            class="btn btn-outline-primary mr-2"
+            name="${id}"
+          >
+            <i class="fa-solid fa-pencil" name="${id}"></i>
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-danger mr-2"
+            name="${id}"
+          >
+            <i class="fa-solid fa-trash" name="${id}"></i>
+          </button>
+        </div>
+        <div class="card-body">
+          ${ url && `<img
+            src="${url}"
+            alt="card image top"
+            class="card-img-top md-3 rounded"
+          />` }
+          <h4 class="task__card__title card-title">${title}</h4>
+          <p class="description card-text">${description}</p>
+          <div class="tags text-white d-flex flex-wrap">
+            <span class="badge text-bg-primary m-1">${type}</span>
+          </div>
+        </div>
+        <div class="card-footer">
+          <button
+            type="button"
+            class="btn btn-outline-primary float-right"
+            data-bs-toggle="modal"
+            data-bs-target="#showTask"
+          >
+            Open Task
+          </button>
+        </div>
+      </div>
+    </div> -->
   </body>
 </html>
